# camper

./: Cargo.toml  LICENSE  README.md  flake.nix
res/: camper.desktop  net.knoopx.camper.desktop
src/: album_grid.rs  app.rs  discover.rs  library.rs  login.rs  main.rs  player.rs  search.rs  storage.rs  style.css
src/bandcamp/: client.rs  mod.rs  types.rs
