[package]
name = "camper"
version = "0.1.0"
edition = "2021"
description = "A simple Bandcamp music player client"
license = "MIT"

[dependencies]
relm4 = { version = "0.9", features = ["macros", "libadwaita"] }
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_7"] }
webkit6 = "0.4"
gstreamer = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
open = "5"
dirs = "5"
mpris-server = "0.8"

[profile.release]
lto = true
strip = true
